comentando código jogo da memória

--- a/jogo-memoria/src/app/app.component.html
+++ b/jogo-memoria/src/app/app.component.html
@@ -1,3 +1,5 @@
+<!-- Mensagem de abertura e regras do jogo -->
+
 <mat-toolbar color="primary" class="text-center">
     Jogo da Memória
   </mat-toolbar>
