--- a/jogo-memoria/src/app/restart/restart.component.html
+++ b/jogo-memoria/src/app/restart/restart.component.html
@@ -1,3 +1,5 @@
+<!-- caixa de diálogo que abre ao completar o jogo -->
+
 <h2 mat-dialog-title>Parabéns!</h2>
 <mat-dialog-content class="mat-typography">
    Você completou o jogo.
